--- a/backend/archive/src/main/resources/application.yml
+++ b/backend/archive/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/reverse_archive?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
+    username: ssafy
     password: ssafy
   jpa:
     generate-ddl: true
