--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.6.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.145.0",
     "web-vitals": "^2.1.4"
   },
