--- a/backend/archive/src/main/resources/application.yml
+++ b/backend/archive/src/main/resources/application.yml
@@ -20,6 +20,7 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.MySQL57Dialect
+        use_sql_comments: true
 #  redis:
 #    host: localhost
 #    port: 6379
