--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "dat.gui": "^0.7.9",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
     "react": "^18.2.0",
