--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dat.gui": "^0.7.9",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
