--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.10.4",
     "@react-three/drei": "^9.37.0",
     "@react-three/fiber": "^8.8.10",
+    "@reduxjs/toolkit": "^1.9.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,8 +21,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.6.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.145.0",
