--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "chakra-dayzed-datepicker": "^0.2.5",
     "dat.gui": "^0.7.9",
+    "date-fns": "^2.29.3",
+    "dayzed": "^3.2.3",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
