--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "chakra-dayzed-datepicker": "^0.2.5",
     "dat.gui": "^0.7.9",
-    "date-fns": "^2.29.3",
-    "dayzed": "^3.2.3",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
