--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "dat.gui": "^0.7.9",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
