--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
