--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "dat.gui": "^0.7.9",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "framer-motion": "^7.6.1",
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
+    "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
