--- a/backend/auth/src/main/resources/application.yml
+++ b/backend/auth/src/main/resources/application.yml
@@ -20,10 +20,10 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.MySQL57Dialect
-  redis:
-    host: localhost
-    port: 6379
-    password: reverse
+  # redis:
+  #   host: localhost
+  #   port: 6379
+  #   password: reverse
 
 logging:
   level:
