--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
     "html-to-draftjs": "^1.5.0",
+    "moment": "^2.29.4",
     "quill-image-resize": "^3.0.9",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
