--- a/backend/archive/src/main/resources/application.yml
+++ b/backend/archive/src/main/resources/application.yml
@@ -2,6 +2,10 @@ server:
   port: 8081
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 30MB
+      max-request-size: 50MB
   jpa:
     generate-ddl: true
     show-sql: true
