--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.3.6",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@react-three/cannon": "^6.5.0",
     "@react-three/drei": "^9.37.0",
     "@react-three/fiber": "^8.8.10",
     "@reduxjs/toolkit": "^1.9.0",
@@ -34,6 +35,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.6.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "three": "^0.145.0",
