--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "gltfjsx": "^5.0.2",
     "gsap": "^3.11.3",
     "html-to-draftjs": "^1.5.0",
+    "immutable": "^4.1.0",
     "moment": "^2.29.4",
     "quill-image-resize": "^3.0.9",
     "react": "^18.2.0",
