--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build_image:
     variables:
         DOCKER_TLS_CERTDIR: "/certs" # sharing same certificate between docker client and daemon
     before_script:
+        - echo $AWS_REGION
         - apk add --no-cache curl jq python3 py3-pip
         - pip install awscli
         - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
