--- a/backend/auth/src/main/resources/application.yml
+++ b/backend/auth/src/main/resources/application.yml
@@ -4,8 +4,8 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://re-verse.co.kr:3306/reverse_auth?serverTimezone=UTC&characterEncoding=UTF-8
-    username: root
+    url: jdbc:mysql://reverse-auth.clpjhqrsb3pu.ap-northeast-2.rds.amazonaws.com:3306/reverse_auth?serverTimezone=UTC&characterEncoding=UTF-8
+    username: admin
     password: flQjtm1024
   jpa:
     generate-ddl: true
@@ -20,10 +20,9 @@ spring:
         show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.MySQL57Dialect
-  # redis:
-  #   host: localhost
-  #   port: 6379
-  #   password: reverse
+  redis:
+    host: reverse-redis.akqgni.ng.0001.apn2.cache.amazonaws.com
+    port: 6379
 
 logging:
   level:
