[BE] ci: change image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,31 @@
 variables:
-    REPO_NAME: "reverse-registry"
-    DOCKER_TLS_CERTDIR: "/certs" # sharing same certificate between docker client and daemon
+    # DOCKER_TLS_CERTDIR: "/certs" # sharing same certificate between docker client and daemon
+    DOCKER_HOST: tcp://docker:2375
+    APP_NAME_1: reverse # frontend
+    APP_NAME_2: auth_backend
+    APP_NAME_3: archive_backend
+    APP_NAME_4: signaling_server
+    TAG_NAME: "1.0"
 
 stages:
     - build
 
 build_image:
     stage: build
-    image: docker:20.10.16
+    image: amazon/aws-cli
     services:
         - docker:20.10.16-dind # docker in docker (docker daemon)
     before_script:
-        - echo "$AWS_REGION"
-        - apk add --no-cache curl jq python3 py3-pip
-        - pip install awscli
-        - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+        - amazon-linux-extras install docker
         - aws --version
         - docker --version
+        - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
     script:
-        - docker build -t $REPO_NAME/frontend:1.0 -f ./frontend/Dockerfile ./frontend
-        - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME/frontend:1.0
-        # - docker build -t $REPO_NAME/auth-backend:1.0 -f ./backend/auth/AuthDockerfile ./backend/auth
-        # - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME/auth-backend:1.0
+        # - docker build -t $REPO_NAME/frontend:1.0 -f ./frontend/Dockerfile ./frontend
+        # - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME/frontend:1.0
+        - docker build -t $APP_NAME_2:$TAG_NAME -f ./backend/auth/AuthDockerfile ./backend/auth
+        - docker tag $APP_NAME_2:$TAG_NAME $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$APP_NAME_2:$TAG_NAME
+        - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$APP_NAME_2:$TAG_NAME
         # - docker build -t $REPO_NAME/archive-backend:1.0 -f ./backend/archive/ArchiveDockerfile ./backend/archive
         # - docker push $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME/archive-backend:1.0
         # - docker build -t $REPO_NAME/signal-backend:1.0 -f ./signal/SignalDockerfile ./signal
