--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-    DOCKER_TLS_CERTDIR: "/certs" # sharing same certificate between docker client and daemon
+    DOCKER_TLS_CERTDIR: "" # sharing same certificate between docker client and daemon
     DOCKER_HOST: tcp://docker:2375
     APP_NAME_1: reverse # frontend
     APP_NAME_2: auth_backend
