[BE] ci: update docker file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR '/app'
 COPY ./package.json .
 RUN npm install
 COPY . ./
+COPY .env .env
 RUN npm run build
 
 # Build Stage 2. Static Server
