--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
     DOCKER_TLS_CERTDIR: "" # sharing same certificate between docker client and daemon
     DOCKER_HOST: tcp://docker:2375
-    # APP_NAME_1: reverse-app # frontend
+    APP_NAME_1: reverse-app # frontend
     APP_NAME_2: auth-backend
     APP_NAME_3: archive-backend
     APP_NAME_4: signal-backend
