fix: bookmark 생성시 friend check

--- a/backend/archive/src/main/resources/application.yml
+++ b/backend/archive/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://reverse-archive.clpjhqrsb3pu.ap-northeast-2.rds.amazonaws.com:3306/reverse_archive?serverTimezone=UTC&characterEncoding=UTF-8
-    username: admin
-    password: flQjtm1024
+    url: jdbc:mysql://localhost:3306/reverse_archive?serverTimezone=UTC&characterEncoding=UTF-8
+    username: ssafy
+    password: ssafy
   servlet:
     multipart:
       max-file-size: 30MB
@@ -26,7 +26,7 @@ spring:
         dialect: org.hibernate.dialect.MySQL57Dialect
         use_sql_comments: true
   redis:
-    host: reverse-redis.akqgni.ng.0001.apn2.cache.amazonaws.com
+    host: localhost
     port: 6379
 
 logging:
